log
Sat Mar 12 17:30:34 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c= a+b;
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
c9a03e3
Sat Mar 12 17:31:50 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:5: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c= a+b;
     ^
cc1.exe: all warnings being treated as errors
Compilation failed
44fffee
Sat Mar 12 17:32:33 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a+b;
      ^
cc1.exe: all warnings being treated as errors
Compilation failed
50b9694
Sat Mar 12 17:34:27 HSP 2022: 
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a + b;
      ^
cc1.exe: all warnings being treated as errors
Compilation failed
335a667
Sat Mar 12 17:35:35 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
b0f8814
Sat Mar 12 18:31:11 HSP 2022: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|6
total_score: 10/70
9f8ed5e
Sat Mar 12 18:32:08 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
7c60ea1
Sat Mar 12 18:34:11 HSP 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5719c1b
